# argus-forge

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
schema/: forge-wire.schema.json
scripts/: smoke-train-image.sh
src/argus_forge/: __init__.py  cli.py  core.py  heuristics.py  jobs.py  manifest.py  models.py  runner.py
src/argus_forge/emitters/: __init__.py  base.py  diffusers.py  kohya.py  onetrainer.py
src/argus_forge/server/: __init__.py  app.py  jobs.py
tests/: conftest.py  test_cli.py  test_emitters.py  test_heuristics.py  test_jobs.py  test_kohya_parity.py  test_manifest.py  test_runner.py  test_server.py  test_smoke.py
tests/golden/kohya/: identity_27_config.toml  identity_27_dataset.toml  pose_composition_20_config.toml  pose_composition_20_dataset.toml  setting_30_config.toml  setting_30_dataset.toml
