[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "argus-forge"
dynamic = ["version"]
description = "Training bridge: turn curated dataset exports into ready-to-run LoRA training configs (kohya_ss / OneTrainer / diffusers)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "smk762" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "structlog>=24.0",
]

[project.optional-dependencies]
# argus-cortex[server] carries the suite's shared write-guard and env-flag
# helpers (argus_cortex.server); it pulls starlette, which fastapi provides too.
# anyio is transitive via starlette, but argus_forge.server.jobs imports it
# directly (typed memory object streams for the /run/{id}/stream fan-out), so
# it is declared here rather than relied on by accident. >=4 for the generic
# create_memory_object_stream[T] spelling.
server = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.7", "argus-cortex[server]>=0.2.0", "anyio>=4.0"]
cli = ["typer>=0.12", "rich>=13.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff==0.15.16", "httpx>=0.27", "httpx2>=2.7"]

[project.scripts]
argus-forge = "argus_forge.cli:app"

[project.urls]
Repository = "https://github.com/smk762/argus-forge"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/argus_forge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/argus_forge/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
